--- a/style.css
+++ b/style.css
@@ -75,18 +75,28 @@ h3{
   margin-right: 20px;
 }
 
+
+#bt4{
+  margin-left: 10px;
+  visibility : hidden;
+}
+
 #bt1
 {
-  margin-right: 15px;
+  margin-right: 20px;
+  margin-left: 50px;
   visibility : hidden;
   padding: auto;
 }
 
 #bt2
 {
+  margin-right: 10px;
   visibility : hidden;
   padding: 6px 23px;
 }
+
+
 
 table
 {
